ecmascript/parser/tests/test262-error-references/fail/034bde9700ab4518.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/034bde9700ab4518.js:1:5
  |
1 | var new A = 0;
  |     ^^^

